# mznlauncher

./: Cargo.toml  README.md  psp.mzn  tsptw.mzn
src/: errors.rs  lib.rs  main.rs  matrix.rs  psp.rs  timeout.rs  tsptw.rs  utils.rs
